Fix build details displaying on mobile

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-history-list/draft-history-entry/draft-history-entry.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/draft-generation/draft-history-list/draft-history-entry/draft-history-entry.component.scss
@@ -1,5 +1,5 @@
 mat-expansion-panel-header {
-  padding: 8px 16px;
+  padding: 8px 24px;
 }
 
 mat-panel-title {
@@ -7,6 +7,7 @@ mat-panel-title {
   align-items: flex-start;
   flex-direction: column;
   flex-grow: 1;
+  flex: 0 1 50;
 }
 
 mat-panel-description {
